# Game-Engine

./: .gitattributes  .gitmodules  CMakeLists.txt  MiniEngine  README.md
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: fragment.glsl  vertex.glsl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/core/: InputManager.cpp  InputManager.h
src/core/config/: Config.cpp  Config.h  EngineSettings.cpp  EngineSettings.h
src/graphics/: Camera.cpp  Camera.h  Shader.cpp  Shader.h
